ingress/test_service.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
        - image: docker.io/kong/httpbin
          imagePullPolicy: IfNotPresent
          name: httpbin
          ports:
            - containerPort: 80
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   creationTimestamp: null
#   name: httpbin
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: httpbin
#       version: v1
#   strategy: {}
#   template:
#     metadata:
#       annotations:
#         istio.io/rev: default
#         kubectl.kubernetes.io/default-container: httpbin
#         kubectl.kubernetes.io/default-logs-container: httpbin
#         prometheus.io/path: /stats/prometheus
#         prometheus.io/port: "15020"
#         prometheus.io/scrape: "true"
#         sidecar.istio.io/status: '{"initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["workload-socket","credential-socket","workload-certs","istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert"],"imagePullSecrets":null,"revision":"default"}'
#       creationTimestamp: null
#       labels:
#         app: httpbin
#         security.istio.io/tlsMode: istio
#         service.istio.io/canonical-name: httpbin
#         service.istio.io/canonical-revision: v1
#         version: v1
#     spec:
#       containers:
#         - image: docker.io/kong/httpbin
#           imagePullPolicy: IfNotPresent
#           name: httpbin
#           ports:
#             - containerPort: 80
#           resources: {}
#         - args:
#             - proxy
#             - sidecar
#             - --domain
#             - $(POD_NAMESPACE).svc.cluster.local
#             - --proxyLogLevel=warning
#             - --proxyComponentLogLevel=misc:error
#             - --log_output_level=default:info
#           env:
#             - name: JWT_POLICY
#               value: third-party-jwt
#             - name: PILOT_CERT_PROVIDER
#               value: istiod
#             - name: CA_ADDR
#               value: istiod.istio-system.svc:15012
#             - name: POD_NAME
#               valueFrom:
#                 fieldRef:
#                   fieldPath: metadata.name
#             - name: POD_NAMESPACE
#               valueFrom:
#                 fieldRef:
#                   fieldPath: metadata.namespace
#             - name: INSTANCE_IP
#               valueFrom:
#                 fieldRef:
#                   fieldPath: status.podIP
#             - name: SERVICE_ACCOUNT
#               valueFrom:
#                 fieldRef:
#                   fieldPath: spec.serviceAccountName
#             - name: HOST_IP
#               valueFrom:
#                 fieldRef:
#                   fieldPath: status.hostIP
#             - name: ISTIO_CPU_LIMIT
#               valueFrom:
#                 resourceFieldRef:
#                   divisor: "0"
#                   resource: limits.cpu
#             - name: PROXY_CONFIG
#               value: |
#                 {}
#             - name: ISTIO_META_POD_PORTS
#               value: |-
#                 [
#                     {"containerPort":80}
#                 ]
#             - name: ISTIO_META_APP_CONTAINERS
#               value: httpbin
#             - name: GOMEMLIMIT
#               valueFrom:
#                 resourceFieldRef:
#                   divisor: "0"
#                   resource: limits.memory
#             - name: GOMAXPROCS
#               valueFrom:
#                 resourceFieldRef:
#                   divisor: "0"
#                   resource: limits.cpu
#             - name: ISTIO_META_CLUSTER_ID
#               value: Kubernetes
#             - name: ISTIO_META_NODE_NAME
#               valueFrom:
#                 fieldRef:
#                   fieldPath: spec.nodeName
#             - name: ISTIO_META_INTERCEPTION_MODE
#               value: REDIRECT
#             - name: ISTIO_META_MESH_ID
#               value: cluster.local
#             - name: TRUST_DOMAIN
#               value: cluster.local
#           image: docker.io/istio/proxyv2:1.19.3
#           name: istio-proxy
#           ports:
#             - containerPort: 15090
#               name: http-envoy-prom
#               protocol: TCP
#           readinessProbe:
#             failureThreshold: 30
#             httpGet:
#               path: /healthz/ready
#               port: 15021
#             initialDelaySeconds: 1
#             periodSeconds: 2
#             timeoutSeconds: 3
#           resources:
#             limits:
#               cpu: "2"
#               memory: 1Gi
#             requests:
#               cpu: 100m
#               memory: 128Mi
#           securityContext:
#             allowPrivilegeEscalation: false
#             capabilities:
#               drop:
#                 - ALL
#             privileged: false
#             readOnlyRootFilesystem: true
#             runAsGroup: 1337
#             runAsNonRoot: true
#             runAsUser: 1337
#           volumeMounts:
#             - mountPath: /var/run/secrets/workload-spiffe-uds
#               name: workload-socket
#             - mountPath: /var/run/secrets/credential-uds
#               name: credential-socket
#             - mountPath: /var/run/secrets/workload-spiffe-credentials
#               name: workload-certs
#             - mountPath: /var/run/secrets/istio
#               name: istiod-ca-cert
#             - mountPath: /var/lib/istio/data
#               name: istio-data
#             - mountPath: /etc/istio/proxy
#               name: istio-envoy
#             - mountPath: /var/run/secrets/tokens
#               name: istio-token
#             - mountPath: /etc/istio/pod
#               name: istio-podinfo
#       initContainers:
#         - args:
#             - istio-iptables
#             - -p
#             - "15001"
#             - -z
#             - "15006"
#             - -u
#             - "1337"
#             - -m
#             - REDIRECT
#             - -i
#             - "*"
#             - -x
#             - ""
#             - -b
#             - "*"
#             - -d
#             - 15090,15021,15020
#             - --log_output_level=default:info
#           image: docker.io/istio/proxyv2:1.19.3
#           name: istio-init
#           resources:
#             limits:
#               cpu: "2"
#               memory: 1Gi
#             requests:
#               cpu: 100m
#               memory: 128Mi
#           securityContext:
#             allowPrivilegeEscalation: false
#             capabilities:
#               add:
#                 - NET_ADMIN
#                 - NET_RAW
#               drop:
#                 - ALL
#             privileged: false
#             readOnlyRootFilesystem: false
#             runAsGroup: 0
#             runAsNonRoot: false
#             runAsUser: 0
#       serviceAccountName: httpbin
#       volumes:
#         - name: workload-socket
#         - name: credential-socket
#         - name: workload-certs
#         - emptyDir:
#             medium: Memory
#           name: istio-envoy
#         - emptyDir: {}
#           name: istio-data
#         - downwardAPI:
#             items:
#               - fieldRef:
#                   fieldPath: metadata.labels
#                 path: labels
#               - fieldRef:
#                   fieldPath: metadata.annotations
#                 path: annotations
#           name: istio-podinfo
#         - name: istio-token
#           projected:
#             sources:
#               - serviceAccountToken:
#                   audience: istio-ca
#                   expirationSeconds: 43200
#                   path: istio-token
#         - configMap:
#             name: istio-ca-root-cert
#           name: istiod-ca-cert
# status: {}
# ---
