ingress/gateway.yml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: argocd-server
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    # istio: ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
      # tls:
      #   httpsRedirect: true
    - hosts:
        - "meethare.site"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: argocd-server-tls
        mode: SIMPLE
