ingress/virtual_service.yml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: argocd-server
  namespace: istio-system
spec:
  gateways:
    - argocd-server
  hosts:
    - "meethare.site"
  http:
    - match:
        - uri:
            prefix: /place
      route:
        - destination:
            host: meethare-place-recommend.default.svc.cluster.local
            port:
              number: 8080

    - match:
        - uri:
            prefix: /map
      route:
        - destination:
            host: meethare-location-recommend.default.svc.cluster.local
            port:
              number: 8080

    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
